Beta7: harden users RLS, derive show_position in backend, add test scaffolding

--- a/.env
+++ b/.env
@@ -14,3 +14,9 @@ CORS_ALLOWLIST=http://localhost:5173,http://127.0.0.1:5173
 
 
 PORT=3000
+
+TEST_ADMIN_EMAIL=gaetano.g1994@gmail.com
+TEST_ADMIN_PASSWORD=171717
+
+TEST_USER_EMAIL=marcolarco@gmail.com
+TEST_USER_PASSWORD=151515
