--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev": "tsx watch src/index.ts",
     "build": "tsc -p tsconfig.json",
     "start": "node dist/index.js",
-    "test": "node --test tests/*.test.js"
+    "test": "node --test"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.49.0",
